# db-labs

./: .gitmodules  README.md  index.html
lab1/: README.md  relations.drawio
lab2/: .clang-format  .gitignore  Cargo.toml  Dockerfile  README.md  conanfile.txt  diesel.toml  docker-compose.yml  premake5.lua
lab2/include/: controller.h  env.h  generate-getters.h  news-service.h  pch.h  ui.h
lab2/migrations/2019-11-17-201319_create_users/: down.sql  up.sql
lab2/migrations/2019-11-17-223648_create_news/: up.sql
lab2/migrations/2019-11-23-222101_create_news_ratings_table/: down.sql  up.sql
lab2/migrations/2019-11-23-222915_add_unique_constraint_for_rater_id_and_news_id_on_news_ratings/: down.sql
lab2/migrations/2019-11-29-235940_migrate_to_pascalcased_role_enum/: up.sql
lab2/migrations/2019-12-04-010049_create_news_likes_and_dislikes_views/: down.sql
lab2/migrations/2019-12-07-004527_create_random_string_function/: up.sql
lab2/scripts/: bootstrap.sh  build-fmt.sh  build-spdlog.sh  build.sh  clean-build.sh  conan-install.sh  run-client.sh  run-server.sh  start.sh
lab2/src/: config.rs  controllers.rs  lib.rs  main.cpp  main.rs  schema.rs  ui.cpp  view.rs
lab2/src/controllers/: mod.rs  users_controller.rs
lab2/src/controllers/cli/: create.rs  enums.rs  push_random_entities.rs  update.rs
lab2/src/controllers/cli/create/: mod.rs  news_rating.rs  user.rs
lab2/src/controllers/cli/search/: mod.rs  news.rs
lab2/src/controllers/cli/update/: mod.rs  news.rs
lab2/src/database/: mod.rs  pg_conn_mgr.rs  pg_placeholders_seq.rs  sql_params.rs
lab2/src/models/: mod.rs  user.rs
lab2/src/models/entities/: mod.rs  news.rs  news_comment.rs  news_rating.rs  user.rs
lab2/src/models/services/: mod.rs  news_comment_service.rs  news_rating_service.rs  news_service.rs  user_service.rs
lab2/src/models/services/sql/: generate_random_users.sql
lab2/src/models/traits/: col_data.rs  create.rs  delete_by_id.rs  entity_service.rs  get_by_id.rs  get_col_upds.rs  get_id.rs  get_pg_conn.rs  get_pg_conn_pool.rs  mod.rs  update_by_id.rs
lab2/src/views/: mod.rs  news_view.rs  user_view.rs
lab3/: Cargo.toml  README.md  diesel.toml
lab3/migrations/2019-11-17-201319_create_users_table/: down.sql  up.sql
lab3/migrations/2019-11-27-223806_add_title_column_to_news_table/: down.sql
lab3/migrations/2019-11-30-001029_migrate_to_pascalcase_user_role_enum_name/: up.sql
lab3/migrations/2019-12-01-232703_create_index_on_news_body_for_fulltext_queries/: down.sql  up.sql
lab3/migrations/2019-12-24-005928_create_indexes_on_users/: down.sql
lab3/migrations/2019-12-24-013628_create_indexes_on_news_ratings/: down.sql  up.sql
lab3/migrations/2019-12-24-104802_create_triggers_on_users/: down.sql
lab3/src/: lib.rs  main.rs
lab3/src/controllers/: global_controller.rs  news_controller.rs  users_controller.rs
lab3/src/database/: mod.rs
term3_1/lab1/: README.md  er-diagram.drawio
term3_1/lab2/: Cargo.toml
term3_1/lab3/: .gitignore  Cargo.toml
term3_1/lab3/migrations/2019-12-04-010049_create_news_likes_and_dislikes_views/: up.sql
term3_1/lab3/migrations/2019-12-23-002511_migrate-to-camel-cased-userrole/: down.sql  up.sql
term3_1/lab3/migrations/2019-12-24-005928_create_indexes_on_users/: up.sql
term3_1/lab3/migrations/2019-12-24-104802_create_triggers_on_users/: up.sql
term3_1/lab3/src/: config.rs
term3_1/lab3/src/controllers/: mod.rs  news_ratings_controller.rs
term3_1/lab3/src/controllers/cli/: delete.rs
term3_1/lab3/src/controllers/cli/create/: news.rs
term3_1/lab3/src/controllers/cli/update/: user.rs
term3_1/lab3/src/models/: mod.rs
term3_1/lab3/src/models/entities/: news.rs  news_rating.rs  user.rs
term3_1/lab3/src/models/services/: news_rating_service.rs  news_service.rs  user_service.rs
term3_1/lab3/src/models/traits/: create.rs  delete_by_id.rs  entity_service.rs  get_pg_conn.rs  get_table.rs  mod.rs
term3_1/lab3/src/views/: user_view.rs
term3_2/data_manipulation/: README.adoc
term3_2/lab1/: Pipfile  README.md  bootstrap.sh  output1.xml  output2.xhtml  output2.xml  transform.xsl
term3_2/lab2/: README.md  bootstrap.sh  docker-compose.yml
term3_2/lab2/crates/console_ui/: Cargo.toml
term3_2/lab2/crates/console_ui/src/: lib.rs  main.rs
term3_2/lab2/crates/redis_chat/: Cargo.toml
term3_2/lab2/crates/redis_chat/src/: lib.rs
term3_2/lab2/crates/worker/: Cargo.toml
term3_2/lab2/crates/worker/src/: lib.rs  main.rs
(+60 files in other folders)
