[package]
name = "console_ui"
version = "0.1.0"
authors = ["veetaha <veetaha2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
envy = "0.4.1"
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0.106", features = [ "derive" ] }
structopt = "0.3.13"

redis_chat = { path = "../redis_chat" }
