[package]
name = "redis_chat"
version = "0.1.0"
authors = ["veetaha <veetaha2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.15.1"
anyhow = "1.0.28"
log = "0.4.8"
uuid = { version = "0.8.1", features = ["v4"] }

stdx = { path = "../stdx" }
